# pynpm-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/pynpm/: __init__.py  __main__.py  cli.py  config.py  core.py  venv_manager.py
tests/: test_cli.py  test_config.py
